<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NovoEndereco"
    android:background="@drawable/pombo"
    android:layout_centerInParent="true">

    <EditText
        android:id="@+id/desc"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/descri_o"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novaCid" />

    <EditText
        android:id="@+id/lat"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <EditText
        android:id="@+id/lon"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat" />

    <Button
        android:id="@+id/salvarNovoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="144dp"
        android:backgroundTint="@color/blue"
        android:hint="@string/salvar"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadesSpinner" />

    <TextView
        android:id="@+id/novaCid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="148dp"
        android:text="@string/novo_endere_o"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltarnv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/beige"
        android:text="@string/voltar"
        android:textColor="#000000"
        android:textSize="16sp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/cidadesSpinner"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lon" />
</androidx.constraintlayout.widget.ConstraintLayout>