<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NovoEndereco"
    android:background="@drawable/pombo"
    android:layout_centerInParent="true">

    <Spinner
        android:id="@+id/cidadesSpinner"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_long" />

    <EditText
        android:id="@+id/txt_descricao"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novaCid" />

    <EditText
        android:id="@+id/txt_lat"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao" />

    <EditText
        android:id="@+id/txt_long"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lat" />

    <Button
        android:id="@+id/btn_salvarE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/salvar"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadesSpinner" />

    <Button
        android:id="@+id/btn_excluirE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#DC9583"
        android:text="@string/excluir"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_delete_24"
        app:iconSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadesSpinner" />

    <TextView
        android:id="@+id/novaCid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="148dp"
        android:text="@string/editar_endere_o"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltarnv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/beige"
        android:text="@string/voltar"
        android:textColor="#000000"
        android:textSize="16sp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/descri_o"
        app:layout_constraintBottom_toTopOf="@+id/txt_descricao"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/latitude"
        app:layout_constraintBottom_toTopOf="@+id/txt_lat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/longitude"
        app:layout_constraintBottom_toTopOf="@+id/txt_long"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>