<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_limpo"
    tools:context=".activities.GerenciarCidades">

    <Button
        android:id="@+id/nova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="138dp"
        android:backgroundTint="@color/blue"
        android:text="@string/nova_cidade"
        android:textAlignment="center"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_add_circle_outline_24"
        app:iconGravity="textTop"
        app:iconSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/buscarCid"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:bufferType="editable"
        android:ems="10"
        android:hint="@string/buscar"
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nova" />

    <Button
        android:id="@+id/botaoBuscar_cid"
        android:layout_width="71dp"
        android:layout_height="51dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_search_24"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lista_end"
        android:layout_width="412dp"
        android:layout_height="535dp"
        android:layout_marginTop="35dp"
        android:background="#B5F1F6FF"
        android:divider="#FFFFFF"
        android:dividerHeight="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarCid" />

    <Button
        android:id="@+id/voltarCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#F0E5BB"
        android:text="@string/voltar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:iconSize="20dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
